@startuml

title __SEGYSTREAM's Class Diagram__\n

  namespace main.java.vladimir.seis {
    namespace segystream {
      class main.java.vladimir.seis.segystream.CategoryPlotRewrite {
          - posNumber : int
          + CategoryPlotRewrite()
          + CategoryPlotRewrite()
          + getPosNumber()
      }
    }
  }
  

  namespace main.java.vladimir.seis {
    namespace segystream {
      class main.java.vladimir.seis.segystream.ChartPanelRewrite {
          {static} ~ KOEF_OF_TRANSITION : double
          {static} ~ NUMBER_OF_CHANELS : int
          - isHasSubcharts : boolean
          - mouseXCoordinate : int
          - mouseYCoordinate : int
          - traceLenght : double
          + ChartPanelRewrite()
          + ChartPanelRewrite()
          + chartMouseClicked()
          + chartMouseMoved()
          + getMouseXCoordinate()
          + getMouseYCoordinate()
          + isHasSubcharts()
          + mousePressed()
          + setChartExecutor()
          + setHasSubcharts()
      }
    }
  }
  

  namespace main.java.vladimir.seis {
    namespace segystream {
      class main.java.vladimir.seis.segystream.DefaultCategoryDatasetRewrite {
          ~ numberDataset : int
          + DefaultCategoryDatasetRewrite()
          + getNumberDataset()
      }
    }
  }
  

  main.java.vladimir.seis.segystream.CategoryPlotRewrite -up-|> org.jfree.chart.plot.CategoryPlot
  main.java.vladimir.seis.segystream.ChartPanelRewrite .up.|> org.jfree.chart.ChartMouseListener
  main.java.vladimir.seis.segystream.ChartPanelRewrite -up-|> org.jfree.chart.ChartPanel
  main.java.vladimir.seis.segystream.ChartPanelRewrite o-- main.java.vladimir.seis.ChartExecutor : chartExecutor
  main.java.vladimir.seis.segystream.ChartPanelRewrite o-- main.java.vladimir.seis.Settings_singleton : settings_singleton
  main.java.vladimir.seis.segystream.DefaultCategoryDatasetRewrite -up-|> org.jfree.data.category.DefaultCategoryDataset


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
